--- a/src/vector/Makefile
+++ b/src/vector/Makefile
@@ -17,7 +17,7 @@ TESTS_HEADERS = $(wildcard $(TESTS_DIR)*.hpp)
 TESTS_OBJ = $(patsubst %.cpp,%.o, $(TESTS_SRC))
 
 CC = g++
-CFLAGS = -std=c++17 -Wall -Wextra -Werror -pedantic -g -I /opt/homebrew/Cellar/googletest/1.14.0/include -fsanitize=address,undefined,unreachable \
+CFLAGS = -std=c++17 -Wall -Wextra -pedantic -g -I /opt/homebrew/Cellar/googletest/1.14.0/include -fsanitize=address,undefined,unreachable \
 -fno-sanitize-recover
 
 AR = ar rcs 
