--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,39 @@
         "array": "cpp",
         "bitset": "cpp",
         "initializer_list": "cpp",
-        "limits": "cpp"
+        "limits": "cpp",
+        "__debug": "cpp",
+        "concepts": "cpp",
+        "functional": "cpp",
+        "ios": "cpp",
+        "memory": "cpp",
+        "mutex": "cpp",
+        "utility": "cpp",
+        "__config": "cpp",
+        "__errc": "cpp",
+        "__locale": "cpp",
+        "__threading_support": "cpp",
+        "__verbose_abort": "cpp",
+        "cctype": "cpp",
+        "charconv": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "locale": "cpp",
+        "new": "cpp",
+        "ratio": "cpp",
+        "stdexcept": "cpp",
+        "typeinfo": "cpp",
+        "algorithm": "cpp"
     }
 }
